// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview|Query.events connection fetches all english events 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "translations": Array [
            Object {
              "locale": "en-GB",
              "title": "event created By english user with review approved",
            },
            Object {
              "locale": "fr-FR",
              "title": "evenement créer par un utilisateur anglais avec review approved",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "translations": Array [
            Object {
              "locale": "en-GB",
              "title": "cosmopolite event",
            },
            Object {
              "locale": "fr-FR",
              "title": "evenement cosmopolite",
            },
          ],
        },
      },
    ],
    "totalCount": 2,
  },
}
`;

exports[`Preview|Query.events connection fetches all french events 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "GrenobleWeb2015",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Event with registrations",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Event without registrations",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "SymfonyLive Paris",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Quelle complémentarité entre numérique et présentiel ?",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "PHPTourDuFuture",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Le droit de suite",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Event 7",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "evenementFutureSansDateDeFin",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "event Create By user with review approved",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "translations": Array [
            Object {
              "locale": "en-GB",
              "title": "event created By english user with review approved",
            },
            Object {
              "locale": "fr-FR",
              "title": "evenement créer par un utilisateur anglais avec review approved",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "On vous présente Agui, l’ami du BP",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Evenement animé par l'utilisateur User",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "+ de tech dans la civictech : c'est quoi une API ?",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "Il n'y a pas que le budget participatif dans la vie",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "translations": Array [
            Object {
              "locale": "en-GB",
              "title": "cosmopolite event",
            },
            Object {
              "locale": "fr-FR",
              "title": "evenement cosmopolite",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "EvenementPresentSansDateDeFin",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "evenementPasseSansDateDeFin",
            },
          ],
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "translations": Array [
            Object {
              "locale": "fr-FR",
              "title": "ParisWeb2014",
            },
          ],
        },
      },
    ],
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches all presential events 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "isPresential": true,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "isPresential": true,
        },
      },
    ],
    "totalCount": 16,
  },
}
`;

exports[`Preview|Query.events connection fetches all remote events 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "isPresential": false,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "isPresential": false,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "isPresential": false,
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "isPresential": false,
        },
      },
    ],
    "totalCount": 4,
  },
}
`;

exports[`Preview|Query.events connection fetches only events associated to a project with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "GrenobleWeb2015",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "Event with registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Quelle complémentarité entre numérique et présentiel ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
          ],
          "title": "PHPTourDuFuture",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Le droit de suite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userAdmin",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "event Create By user with review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userMaxime",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "evenement créer par un utilisateur anglais avec review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "On vous présente Agui, l’ami du BP",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Evenement animé par l'utilisateur User",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "+ de tech dans la civictech : c'est quoi une API ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Il n'y a pas que le budget participatif dans la vie",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenement cosmopolite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "evenementPasseSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE5",
      "hasNextPage": false,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches only events associated to a theme with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "GrenobleWeb2015",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "Event with registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Quelle complémentarité entre numérique et présentiel ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
          ],
          "title": "PHPTourDuFuture",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Le droit de suite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userAdmin",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "event Create By user with review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userMaxime",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "evenement créer par un utilisateur anglais avec review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "On vous présente Agui, l’ami du BP",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Evenement animé par l'utilisateur User",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "+ de tech dans la civictech : c'est quoi une API ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Il n'y a pas que le budget participatif dans la vie",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenement cosmopolite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "evenementPasseSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE5",
      "hasNextPage": false,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches only events matching a specific term with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "GrenobleWeb2015",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "Event with registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Quelle complémentarité entre numérique et présentiel ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
          ],
          "title": "PHPTourDuFuture",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Le droit de suite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userAdmin",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "event Create By user with review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userMaxime",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "evenement créer par un utilisateur anglais avec review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "On vous présente Agui, l’ami du BP",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Evenement animé par l'utilisateur User",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "+ de tech dans la civictech : c'est quoi une API ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Il n'y a pas que le budget participatif dans la vie",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenement cosmopolite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "evenementPasseSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE5",
      "hasNextPage": false,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches only future events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQz",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "GrenobleWeb2015",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQx",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "Event with registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ2",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ0",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ5",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Quelle complémentarité entre numérique et présentiel ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQy",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
          ],
          "title": "PHPTourDuFuture",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ4",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Le droit de suite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ3",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenementFutureSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userAdmin",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "event Create By user with review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "projects": Array [],
          "review": Object {
            "comment": null,
            "refusedReason": "NONE",
            "reviewer": Object {
              "_id": "userMaxime",
            },
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "evenement créer par un utilisateur anglais avec review approved",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "On vous présente Agui, l’ami du BP",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Evenement animé par l'utilisateur User",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjEz",
      "hasNextPage": false,
    },
    "totalCount": 14,
  },
}
`;

exports[`Preview|Query.events connection fetches only passed events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "+ de tech dans la civictech : c'est quoi une API ?",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0SWRm",
            },
          ],
          "review": null,
          "themes": Array [],
          "title": "Il n'y a pas que le budget participatif dans la vie",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "evenement cosmopolite",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "EvenementPresentSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "projects": Array [
            Object {
              "id": "UHJvamVjdDpwcm9qZWN0MQ==",
            },
          ],
          "review": null,
          "themes": Array [
            Object {
              "id": "theme1",
            },
            Object {
              "id": "theme2",
            },
          ],
          "title": "evenementPasseSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "id": "RXZlbnQ6ZXZlbnQ1",
          "projects": Array [],
          "review": null,
          "themes": Array [],
          "title": "ParisWeb2014",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjU=",
      "hasNextPage": false,
    },
    "totalCount": 6,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by first end date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2014-02-12 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
        },
      },
      Object {
        "node": Object {
          "endAt": "2029-05-05 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ3",
          "startAt": "2029-01-01 00:00:00",
          "title": "Event 7",
        },
      },
      Object {
        "node": Object {
          "endAt": "2029-09-09 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ4",
          "startAt": "2029-03-03 00:00:00",
          "title": "Le droit de suite",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by first start date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2014-02-12 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
        },
      },
      Object {
        "node": Object {
          "endAt": null,
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "startAt": "2018-11-14 00:00:00",
          "title": "evenementPasseSansDateDeFin",
        },
      },
      Object {
        "node": Object {
          "endAt": null,
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "startAt": "2019-08-07 00:00:00",
          "title": "EvenementPresentSansDateDeFin",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by last end date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2045-03-10 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ0",
          "startAt": "2032-01-01 00:00:00",
          "title": "SymfonyLive Paris",
        },
      },
      Object {
        "node": Object {
          "endAt": "2040-02-02 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
        },
      },
      Object {
        "node": Object {
          "endAt": "2035-03-16 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQz",
          "startAt": "2032-06-10 00:00:00",
          "title": "GrenobleWeb2015",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches the 3 events ordered by last start date with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "endAt": "2035-03-16 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQz",
          "startAt": "2032-06-10 00:00:00",
          "title": "GrenobleWeb2015",
        },
      },
      Object {
        "node": Object {
          "endAt": "2032-03-10 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQx",
          "startAt": "2032-03-01 00:00:00",
          "title": "Event with registrations",
        },
      },
      Object {
        "node": Object {
          "endAt": "2040-02-02 00:00:00",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": true,
    },
    "totalCount": 20,
  },
}
`;

exports[`Preview|Query.events connection fetches the first hundred events with a cursor 1`] = `
Object {
  "events": Object {
    "edges": Array [
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMw==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Paris Web est un événement annuel de deux jours de conférences et un jour d'ateliers consacré au développement web. L'événement a généralement lieu fin septembre, début octobre, à Paris ou dans sa proche banlieue depuis 2006 et organisé par l'association à but non lucratif Paris-Web.",
          "createdAt": "2015-01-03 00:00:00",
          "enabled": true,
          "endAt": "2035-03-16 00:00:00",
          "fullAddress": "Optique Moreau, 48 Rue de Stalingrad, 38000 Grenoble",
          "id": "RXZlbnQ6ZXZlbnQz",
          "lat": 45.178658,
          "link": null,
          "lng": 5.725499,
          "startAt": "2032-06-10 00:00:00",
          "title": "GrenobleWeb2015",
          "updatedAt": null,
          "url": "https://capco.test/events/grenobleweb2015",
          "zipCode": "38000",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "<i>L’exactitude des informations ci-dessous relève uniquement de la responsabilité de l’organisateur de l’évènement“</i> <h2>Objet</h2> exprimer et échanger sur les réformes qui vous semblent nécessaires <h2>Public attendu</h2> Cet événement est ouvert au public dans la limite de 30 participants, sans inscription. Pour participer, rendez-vous à l’heure dite et au lieu indiqué.",
          "createdAt": "2015-01-01 00:00:00",
          "enabled": true,
          "endAt": "2032-03-10 00:00:00",
          "fullAddress": "111 Avenue Clémenceau, Lyon",
          "id": "RXZlbnQ6ZXZlbnQx",
          "lat": 45.7012741,
          "link": null,
          "lng": 4.7959638,
          "startAt": "2032-03-01 00:00:00",
          "title": "Event with registrations",
          "updatedAt": null,
          "url": "https://capco.test/events/event-with-registrations",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Le Hellfest, également appelé Hellfest Summer Open Air, est un festival de musique français spécialisé dans les musiques extrêmes, annuellement organisé au mois de juin à Clisson en Loire-Atlantique. Sa forte fréquentation le fait figurer parmi les plus importants festivals de musique français.",
          "createdAt": "2015-01-06 00:00:00",
          "enabled": true,
          "endAt": "2040-02-02 00:00:00",
          "fullAddress": "103 Grande Rue de la Croix-Rousse, 69004 Lyon",
          "id": "RXZlbnQ6ZXZlbnQ2",
          "lat": 45.781327,
          "link": "https://www.hellfest.fr/",
          "lng": 4.830676,
          "startAt": "2032-02-01 00:00:00",
          "title": "Event without registrations",
          "updatedAt": null,
          "url": "https://capco.test/events/event-without-registrations",
          "zipCode": "69004",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Rendez-vous les 29 et 30 mars pour l'évènement SymfonyLive Paris 2018, évènement Symfony 100% francophone.",
          "createdAt": "2015-01-04 00:00:00",
          "enabled": true,
          "endAt": "2045-03-10 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ0",
          "lat": 45.747947,
          "link": "http://www.symfonyLive2015.fr",
          "lng": 4.838041,
          "startAt": "2032-01-01 00:00:00",
          "title": "SymfonyLive Paris",
          "updatedAt": null,
          "url": "https://capco.test/events/symfonylive-paris",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Comment favoriser le retour des équipes dans de bonnes conditions ? Comment adapter l'organisation du travail à une nouvelle réalité ?  Comment re-créer l\\\\’engagement autour du projet et de la mission de l’entreprise ? Comment tirer les enseignements des mois de confinement pour identifier les forces et faiblesses de son organisation ? Face à autant d’inconnues, dans un contexte inédit où nul expert ne peut prétendre détenir la vérité, la réponse ne peut être que collective. Depuis 2014, à Cap Collectif, nous accompagnons les entreprises dans la construction de leurs démarches d’intelligence collective afin de faire émerger les meilleures solutions à des problématiques données et  développer la confiance et l’engagement au sein des organisations. Au travers de ce webinar, nous souhaitons partager avec vous notre méthodologie de sortie de crise par le collectif capable de répondre aux enjeux actuels.",
          "createdAt": "2015-01-10 00:00:00",
          "enabled": true,
          "endAt": "2030-11-13 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQxMA==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2030-11-11 00:00:00",
          "title": "Remobiliser ses collaborateurs par l’intelligence collective mode d’emploi",
          "updatedAt": null,
          "url": "https://capco.test/events/remobiliser-ses-collaborateurs-par-lintelligence-collective-mode-demploi",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Numérique et présentiel sont complémentaires de l’affirmation à la pratique, quelle articulation pertinente mettre en place ? Toute personne qui a assisté à un colloque récemment a forcément entendu la phrase magique “numérique et présentiel sont complémentaires” derrière l’unanimisme, il s’agit de réfléchir concrètement à la bonne articulation en prenant le meilleur des deux, en étant lucide sur ce que l’un et l’autre ne savent pas faire, le tout en réfléchissant à la meilleure allocation possible des ressources et des moyens. Nous reviendrons en détail sur 3 cas d’usages possibles , qui nous paraissent les plus pertinents :les ateliers de cadrage en amont pour structurer la consultation en ligne,les ateliers-relais pendant la consultation pour toucher les publics dits éloignés,les ateliers délibératifs à l’issue de la consultation en ligne pour approfondir les points clivants ou idées nouvelles.",
          "createdAt": "2015-01-09 00:00:00",
          "enabled": true,
          "endAt": "2030-11-08 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ5",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2030-11-03 00:00:00",
          "title": "Quelle complémentarité entre numérique et présentiel ?",
          "updatedAt": null,
          "url": "https://capco.test/events/quelle-complementarite-entre-numerique-et-presentiel",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMg==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "2 jours de conférences, de rencontres et d'échanges autour de PHP et son écosystème. Rejoignez la communauté, les experts PHP et les sociétés qui font vivre notre langage ! Pro. Et Open-Source. Communautés PHP. Dédié Au Langage.",
          "createdAt": "2015-01-02 00:00:00",
          "enabled": true,
          "endAt": "2032-06-15 00:00:00",
          "fullAddress": "Tour Eiffel, 75007 Paris",
          "id": "RXZlbnQ6ZXZlbnQy",
          "lat": 48.858243,
          "link": "http://www.phptour2014.fr",
          "lng": 2.294515,
          "startAt": "2030-03-10 00:00:00",
          "title": "PHPTourDuFuture",
          "updatedAt": null,
          "url": "https://capco.test/events/phptourdufuture",
          "zipCode": "75007",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMw==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Faire participer c’est bien ! Recréer durablement de la confiance sur votre territoire, c’est mieux ! Comment organiser le retour aux participants une fois qu’ils ont apporté leur contribution ? Du mail de remerciement (une politesse élémentaire qui n’est finalement pas si fréquente en pratique) aux comités citoyens de suivi et d’évaluation, nous dresserons un panorama des pratiques existantes et nous interrogerons sur les moyens de les encourager voire les systématiser.",
          "createdAt": "2015-01-08 00:00:00",
          "enabled": true,
          "endAt": "2029-09-09 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ4",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2029-03-03 00:00:00",
          "title": "Le droit de suite",
          "updatedAt": null,
          "url": "https://capco.test/events/le-droit-de-suite",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMg==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "So boring",
          "createdAt": "2015-01-07 00:00:00",
          "enabled": true,
          "endAt": "2029-05-05 00:00:00",
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnQ3",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2029-01-01 00:00:00",
          "title": "Event 7",
          "updatedAt": null,
          "url": "https://capco.test/events/event-7",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "I am in the future, but none knows when I will end…",
          "createdAt": "2015-01-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "1 rue chevrière, 07400 Meysse",
          "id": "RXZlbnQ6ZXZlbmVtZW50RnV0dXJlU2Fuc0RhdGVEZUZpbg==",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2024-11-14 00:00:00",
          "title": "evenementFutureSansDateDeFin",
          "updatedAt": null,
          "url": "https://capco.test/events/evenementfuturesansdatedefin",
          "zipCode": "07400",
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "User 5 is my author",
          "createdAt": "2015-04-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWQ=",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2024-04-14 00:00:00",
          "title": "event Create By user with review approved",
          "updatedAt": null,
          "url": "https://capco.test/events/event-create-by-user-with-review-approved",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNTIy",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Boir une café",
          "createdAt": "2015-04-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRDcmVhdGVCeUFVc2VyUmV2aWV3QXBwcm92ZWRFbg==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2024-04-14 00:00:00",
          "title": "evenement créer par un utilisateur anglais avec review approved",
          "updatedAt": null,
          "url": "https://capco.test/events/evenement-creer-par-un-utilisateur-anglais-avec-review-approved",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWd1aQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": null,
          },
          "body": "La phase d’analyse dans un BP est aussi fastidieuse à réaliser que passionnante à étudier, aussi méconnue du public que redoutée des services ! Petit tour d’horizon des enjeux. Avant de découvrir Agui, le dernier né chez Capco, l’outil d’analyse intégré à la plateforme qui va transformer votre chemin de croix en promenade du dimanche.",
          "createdAt": "2015-04-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGU=",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2021-05-28 00:00:00",
          "title": "On vous présente Agui, l’ami du BP",
          "updatedAt": null,
          "url": "https://capco.test/events/on-vous-presente-agui-lami-du-bp",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyQWd1aQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": null,
          },
          "body": "Vous savez, moi je ne crois pas qu’il y ait de bonne ou de mauvaise situation. Moi, si je devais résumer ma vie aujourd’hui avec vous, je dirais que c’est d’abord des rencontres. Des gens qui m’ont tendu la main, peut-être à un moment où je ne pouvais pas, où j’étais seul chez moi. Et c’est assez curieux de se dire que les hasards, les rencontres forgent une destinée… Parce que quand on a le goût de la chose, quand on a le goût de la chose bien faite, le beau geste, parfois on ne trouve pas l’interlocuteur en face je dirais, le miroir qui vous aide à avancer. Alors ça n’est pas mon cas, comme je disais là, puisque moi au contraire, j’ai pu ':' et je dis merci à la vie, je lui dis merci, je chante la vie, je danse la vie… je ne suis qu’amour ! Et finalement, quand beaucoup de gens aujourd’hui me disent « Mais comment fais-tu pour avoir cette humanité ? », et bien je leur réponds très simplement, je leur dis que c’est ce goût de l’amour ce goût donc qui m’a poussé aujourd’hui à entreprendre une construction mécanique, mais demain qui sait ? Peut-être simplement à me mettre au service de la communauté, à faire le don, le don de soi…",
          "createdAt": "2015-04-14 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVVc2VyQW5pbWF0b3I=",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2021-04-28 00:00:00",
          "title": "Evenement animé par l'utilisateur User",
          "updatedAt": null,
          "url": "https://capco.test/events/evenement-anime-par-lutilisateur-user",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyU3B5bA==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Terme barbare mais qui vous sera expliqué avec pédagogie par notre Directeur technique, Aurélien David. Au-delà de la définition, il vous expliquera les usages immédiats possibles pour vous et en quoi les API seront bien le pilier demain des démarches numériques sur votre territoire.",
          "createdAt": "2020-05-28 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aFJlcGxheQ==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2020-05-28 00:00:00",
          "title": "+ de tech dans la civictech : c'est quoi une API ?",
          "updatedAt": null,
          "url": "https://capco.test/events/de-tech-dans-la-civictech-cest-quoi-une-api",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyU3B5bA==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "“Innovation”, le mot est lâché. Nous souhaitons ici présenter des cas d’usage qui méritent l’attention par leur caractère singulier. Au-delà de la présentation de ces cas d’usage, nous lancerons la discussion sur ce qu’il y a dans ces initiatives de radicalement différent des pratiques les plus courantes. <br />- projet d’entraide directe pendant le Covid (Orléans, Albi, Rennes, Paris…)<br />- consultations sur le plan climat (Grenoble, Poitiers)<br />- consultation budgétaire (Corrèze)",
          "createdAt": "2020-05-27 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbnRSZW1vdGVQYXN0V2l0aG91dFJlcGxheQ==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2020-05-27 00:00:00",
          "title": "Il n'y a pas que le budget participatif dans la vie",
          "updatedAt": null,
          "url": "https://capco.test/events/il-ny-a-pas-que-le-budget-participatif-dans-la-vie",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": null,
          "body": "va donc, cosmopolite",
          "createdAt": "2020-02-28 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6Y29zbW9wb2xpdGVFdmVudA==",
          "lat": null,
          "link": null,
          "lng": null,
          "startAt": "2020-02-17 00:00:00",
          "title": "evenement cosmopolite",
          "updatedAt": null,
          "url": "https://capco.test/events/evenement-cosmopolite",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMg==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Oh yeah",
          "createdAt": "2015-01-12 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbmVtZW50UHJlc2VudFNhbnNEYXRlRGVGaW4=",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2019-08-07 00:00:00",
          "title": "EvenementPresentSansDateDeFin",
          "updatedAt": null,
          "url": "https://capco.test/events/evenementpresentsansdatedefin",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyMw==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "hey hey",
          "createdAt": "2015-01-13 00:00:00",
          "enabled": true,
          "endAt": null,
          "fullAddress": "",
          "id": "RXZlbnQ6ZXZlbmVtZW50UGFzc2VTYW5zRGF0ZURlRmlu",
          "lat": null,
          "link": "http://www.lavie.fr",
          "lng": null,
          "startAt": "2018-11-14 00:00:00",
          "title": "evenementPasseSansDateDeFin",
          "updatedAt": null,
          "url": "https://capco.test/events/evenementpassesansdatedefin",
          "zipCode": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "VXNlcjp1c2VyNQ==",
            "responses": Object {
              "edges": Array [],
            },
            "userType": Object {
              "name": "Citoyen",
            },
          },
          "body": "Paris Web, la conférence francophone des gens qui font un web accessible et de qualité.",
          "createdAt": "2015-01-05 00:00:00",
          "enabled": true,
          "endAt": "2014-02-12 00:00:00",
          "fullAddress": "101 rue d'Angers, 69007 Lyon",
          "id": "RXZlbnQ6ZXZlbnQ1",
          "lat": 45.748041,
          "link": "http://www.parisweb2014.fr",
          "lng": 4.840284,
          "startAt": "2014-02-11 00:00:00",
          "title": "ParisWeb2014",
          "updatedAt": null,
          "url": "https://capco.test/events/parisweb2014",
          "zipCode": "69007",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE5",
      "hasNextPage": false,
    },
    "totalCount": 20,
  },
}
`;
